[project]
name = "sourmash_plugin_RandSampling"
description = "sourmash plugin to extract kmers with weighted-random-subsampling."
readme = "README.md"
requires-python = ">=3.8"
version = "0.1"

dependencies = [
    "sourmash>=4.8.0,<5",
    "numpy>=1.20,<2",
    "pandas>=2",
    "seaborn>=0.12,<1",
    ]

[metadata]
license = { text = "BSD 3-Clause License" }

[project.entry-points."sourmash.cli_script"]
randsampling = "sourmash_plugin_RandSampling:Command_RandSampling"
